--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "esbuild": "^0.15.10",
     "glob": "8.0.3",
     "three": "^0.145.0",
+    "typescript": "^4.8.4",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0"
   },
