--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ edition = "2021"
 glob ="*"
 
 rayon = "*"
-swc = "0.226.21"
+swc = {version="0.226.21"}
 swc_atoms = "0.4.14"
 swc_common = { version = "0.28.5", features = ["concurrent"] }
 swc_ecma_ast = "0.91.5"
@@ -22,3 +22,8 @@ swc_ecma_transforms = { version = "0.193.18", features = [
 swc_ecma_utils = "0.102.10"
 swc_ecma_visit = "0.77.5"
 swc_ecma_codegen = "*"
+
+tracing = "0.1"
+tracing-subscriber = { version="0.3", features=["env-filter"] }
+tracing-chrome = "0.6.0"
+
