--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,3 +28,10 @@ tracing-subscriber = { version="0.3", features=["env-filter"] }
 tracing-chrome = "0.6.0"
 
 mimalloc-rust = "*"
+
+[profile.release]
+codegen-units = 1
+debug         = false
+incremental   = true
+lto           = false
+opt-level     = 3
