--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "@swc/cli": "^0.1.57",
     "@swc/core": "^1.3.6",
     "acorn": "^8.8.0",
+    "bizcharts": "^4.1.21",
     "esbuild": "^0.15.10",
     "glob": "8.0.3",
+    "strip-comments": "^2.0.1",
     "three": "^0.145.0",
     "typescript": "^4.8.4",
     "webpack": "^5.74.0",
